crates/elenchus-parser/tests/snapshots/errors__list_premise_needs_two_atoms.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PREMISE modes:\\n    EXCLUSIVE\\n        Sys mode idle\\nCHECK Sys\\n\")"
---
Syntax Error at line 4, col 1: a list premise needs at least two atoms
  | CHECK Sys
  | ^--- here
